--- a/app/views/users/index_partials/_index_table.html.erb
+++ b/app/views/users/index_partials/_index_table.html.erb
@@ -27,7 +27,7 @@
 	<td><%= link_to user.andrew_id, user %></td>
 	<td><%= user.role %></td>
 	<td>
-        <%= render partial: 'shared/boolean_label', locals: { boolean_label: user.active } %>
+        <%= render partial: 'shared/boolean_label', locals: { boolean_label: user.active, true_message: "Yes", false_message: "No" } %>
         </td>
 	<!-- Staff can see this list but only admin can edit users-->
 	<% if @current_user.role? :admin %>
