Use display_name for user_key in dashboards

--- a/app/views/home/_staff_dashboard.html.erb
+++ b/app/views/home/_staff_dashboard.html.erb
@@ -37,7 +37,7 @@
     </tr>
   <% @pending_filter_keys.each do |key| %>
     <tr>
-      <td><%= link_to key.name, user_key_path(key) %>
+      <td><%= link_to key.display_name, user_key_path(key) %>
       <td><%= link_to key.user.andrew_id, user_path(key.user) %></td>
       <td><%= key.time_submitted.to_formatted_s(:pretty)%></td>
     </tr>
