--- a/app/views/home/_requester_dashboard.html.erb
+++ b/app/views/home/_requester_dashboard.html.erb
@@ -16,7 +16,7 @@
   </tr>
 <% @confirmed_keys.each do |key| %>
   <tr>
-    <td><%= link_to key.name, user_key_path(key) %></td>
+    <td><%= link_to key.display_name, user_key_path(key) %></td>
     <%# FIXME add a "click here to view to have the CSS play nicely" %>
     <td><%= key.gen_api_key %></td>
     <td><%= key.time_expired ? key.time_expired.to_formatted_s(:pretty) : "N/A" %></td>
@@ -37,7 +37,7 @@
   </tr>
 <% @in_progress.each do |key| %>
   <tr>
-    <td><%= link_to key.name, user_key_path(key) %></td>
+    <td><%= link_to key.display_name, user_key_path(key) %></td>
     <td><%= key.created_at.to_formatted_s(:pretty) %></td>
   </tr>
 <% end %>
@@ -56,7 +56,7 @@
   </tr>
 <% @awaiting_admin_review.each do |key| %>
   <tr>
-    <td><%= link_to key.name, user_key_path(key) %></td>
+    <td><%= link_to key.display_name, user_key_path(key) %></td>
     <td><%= key.created_at.to_formatted_s(:pretty) %></td>
   </tr>
 <% end %>
@@ -75,7 +75,7 @@
   </tr>
 <% @expired_keys.each do |key| %>
   <tr>
-    <td><%= link_to key.name, user_key_path(key) %></td> 
+    <td><%= link_to key.display_name, user_key_path(key) %></td> 
     <td><%= key.time_expired ? key.time_expired.to_formatted_s(:pretty) : "N/A" %></td>
   </tr>
 <% end %>
