--- a/app/views/user_keys/show_partials/_approval_buttons.html.erb
+++ b/app/views/user_keys/show_partials/_approval_buttons.html.erb
@@ -1,10 +1,12 @@
 <% if @user_key.at_stage? :awaiting_filters %>
 
-  <%= link_to 'Share key with approvers', set_as_filtered_path(@user_key), method: :patch, class: "big-button success" %> |
+  <%= link_to 'Share key with approvers', set_as_filtered_path(@user_key),
+              method: :patch, class: "big-button success",
+              disabled: !(@user_key.can_be_set_to? :awaiting_confirmation) %> |
 
 <% elsif @user_key.at_stage? :awaiting_confirmation %>
 
-  <% if @user_key.approved_by_all? %>
+  <% if @user_key.can_be_set_to? :confirmed? %>
     
     <p>This key has been approved by everyone and is ready to be released to the requester.</p>
   <% else %>
@@ -12,7 +14,7 @@
   <% end %>
     
     <%= link_to 'Confirm and release key to user', set_as_confirmed_path(@user_key), data: { confirm: 'Are you sure? If you click OK, a confirmation email will be sent to the key requester and this key request will be complete.' },
-        method: :patch, class: "big-button success", disabled: !@user_key.approved_by_all? %> |
+        method: :patch, class: "big-button success", disabled: !(@user_key.can_be_set_to? :confirmed) %> |
 
 <% else %> <!-- Must be at_stage? :confirmed -->
 
