--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -1,4 +1,14 @@
-<h3><%=@user_key.name%></h3>
+<h3><%=@user_key.display_name %>&nbsp;
+  <small> for
+    <% if @current_user.role? :is_staff %>
+      <%= link_to @user_key.user.andrew_id, @user_key.user %>
+    <% else %>
+      <%= @user_key.user.andrew_id %>
+    <% end %>
+  </small>
+</h3>
+
+<hr/>
 
 <%= render 'shared/error_messages', object: @user_key %>
 
@@ -7,39 +17,46 @@
   <%= render partial: 'user_keys/show_partials/approval_status' %>
 <% end %> 
 
-<!-- Everyone can see the following information.-->
-<p>
-  <% if @user_key.at_stage? :confirmed %>
-    <i class="fi-check success"></i>&nbsp;The request for this key has been completed.</i>
-  <% else %>
-    <i class="fi-x alert"></i>&nbsp;<i>This key request is incomplete.</i>
-  <% end %>
-</p>
+<!-- Everyone can see most of the following information.-->
+    
+<!-- Timestamps -->
+<table>
+  <tr>
+    <th>Request Form Status</th>
+    <th>Submission</th>
+    <% if @current_user.role? :is_staff %>
+      <th>Ready for approval</th>
+    <% end %> 
+    <th>Confirmation</th>
+    <th>Expires</th>
+    <% if @current_user.role? :is_staff %>
+      <th>Active</th>
+    <% end %>
+  </tr>
+  <tr>
+    <td class="text-center">
+      <%= render partial: 'shared/boolean_label', locals: { boolean_label: (@user_key.can_be_set_to? :awaiting_filters), true_message: "Completed", false_message: "Incomplete" } %>
+    </td>
+    <%= render partial: 'user_keys/index_partials/row_times', locals: { user_key: @user_key } %>
+  </tr>
+</table>
 
-<p>
-  <strong>Value:</strong>
-  <%= @user_key.gen_api_key %>
-</p>
-
-<p>
-  <strong>Expires:</strong>
-  <%= @user_key.time_expired.nil? ? "N/A" : @user_key.time_expired.to_formatted_s(:pretty) %>
-  <!-- Green/red expired label-->
-  <%= render partial: 'shared/boolean_label', locals: { boolean_label: !@user_key.expired?, true_message: "Currently Available for Use", false_message: "Expired" } %>
-</p>
+<table>
+  <tr>
+    <th>
+      API Key Value
+    </th>
+  </tr>
+  <tr>
+    <td>
+      <%= @user_key.gen_api_key || "<em>Your key is not currently available.</em>"%>
+    </td>
+  </th>
+</table>
 
 <p>
   <strong>Application text:</strong>
   <%= render partial: 'user_keys/show_partials/application_text' %>
-</p>
-
-<p>
-  <strong>Agreed to terms:</strong>
-  <% if @user_key.agree %>
-  <i class="fi-check success"></i>
-  <% else %>
-    <i class="fi-x alert"></i>
-  <% end %>
 </p>
 
 <!--Show notes from Admin -->
@@ -53,31 +70,6 @@
   <div class="staff_only panel">
   <h3>Staff only</h3>
   <hr/>
-        
-    <p>
-      <strong>User:</strong>
-      <%= link_to @user_key.user.andrew_id, @user_key.user  %>
-    </p>
-    
-    <p>
-      <strong>Time submitted:</strong>
-      <%= @user_key.time_submitted.nil? ? "Not submitted yet" : @user_key.time_submitted.to_formatted_s(:pretty) %>
-    </p>
-    
-    <p> 
-      <strong>Time shared with approvers:</strong>
-      <%= @user_key.time_filtered.nil? ? "Not shared with approvers yet" : @user_key.time_filtered.to_formatted_s(:pretty) %>
-    </p>
-    
-    <p>
-      <strong>Time confirmed:</strong>
-      <%= @user_key.time_confirmed.nil? ? "Not confirmed yet" : @user_key.time_confirmed.to_formatted_s(:pretty) %>
-    </p>
-    
-    <p>
-      <strong>Active:</strong>
-      <%= render partial: 'shared/boolean_label', locals: { boolean_label: @user_key.active, true_message: "Yes", false_message: "No" } %>
-    </p>
     
     <%= render partial: 'user_keys/show_partials/list_of_objects', locals: { object_name: "Column", object_symbol: :columns} %>
     
