Minor edits to approval_status and list_of_approvers to match other changes

--- a/app/views/user_keys/show_partials/_approval_status.html.erb
+++ b/app/views/user_keys/show_partials/_approval_status.html.erb
@@ -1,3 +1,4 @@
+<div class="panel text-center">
 <p>
   <strong>Approval Status:</strong>
   <i class="fi-check success">
@@ -16,3 +17,4 @@
     Confirmed?
   </i>
 </p>
+</div>
