--- a/app/views/user_keys/show_partials/_list_of_approvers.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_approvers.html.erb
@@ -1,6 +1,6 @@
 <% if @user_key.at_stage? :awaiting_confirmation %>
   
-  <% if @user_key.approved_by_all? %>
+  <% if @user_key.can_be_set_to? :confirmed %>
 
     <p>This key has been approved by everyone.</p>
 
