--- a/app/views/user_keys/form_partials/_terms.html.erb
+++ b/app/views/user_keys/form_partials/_terms.html.erb
@@ -21,5 +21,5 @@ to projects/initiatives utilizing the API and/or data from The Bridge.</p>
 <!-- Agree to sell your soul to Student Activities here -->
 <div class="collapsed_row">
   <%= f.check_box :agree %>
-  <%= f.label :agree %>
+  <%= f.label "I have read and agree to the terms and conditions." %>
 </div>
