--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <div id="error_explanation">
+  <fieldset id="error_explanation">
     <h3><%= pluralize(object.errors.count, "error") %>:</h3>
 
     <ul>
@@ -7,5 +7,5 @@
       <li><%= message %></li>
     <% end %>
     </ul>
-  </div>
+  </fieldset>
 <% end %>
