--- a/app/views/user_keys/_form.html.erb
+++ b/app/views/user_keys/_form.html.erb
@@ -79,7 +79,7 @@
   
   <!-- "cancel_url" is passed as a local variable from new and edit-->
   <div class="actions">
-    <%= f.submit class: "big-button success" %> | 
+    <%= f.submit current_page?(:action => 'new')? "Create application" : "Update application", class: "big-button success" %> | 
     <%= link_to 'Cancel', cancel_url, class: "big-button secondary" %>
   </div>
   
