--- a/app/views/user_keys/own_user_keys.html.erb
+++ b/app/views/user_keys/own_user_keys.html.erb
@@ -11,4 +11,4 @@
 
 <br>
 
-<%= link_to 'New User key', new_user_key_path, class: "big-button" %>
+<%= link_to 'Apply for a new key', new_user_key_path, class: "big-button" %>
