--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,9 @@
 </p>
 
 <%= render partial: 'shared/list_of_user_keys' %>
+<% if @current_user.role? :admin %>
 
 <%= link_to 'Edit user', edit_user_path(@user), class: "big-button" %> |
 <%= link_to 'Back to users list', users_path, class: "big-button secondary" %>
+
+<% end %>
