--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -114,7 +114,16 @@ $success-color: #5da423;
 #error_explanation {
   background-color: lighten($primary-color, 55);
   border-radius: 8px;
+}
 
+.tabs dd.active a, .tabs .tab-title.active a {
+    border-top: 1px solid #000;
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
+}
+
+.tabs-content > .content {
+  padding: 2em;
 }
 
 // Apply styles to HTML elements
