--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <p><%= @user.andrew_id %>, you have received a message from Shiny Metal API:</p>
+    <p><%= @recipient.nil? ? "Hello" : @recipient.andrew_id %>, you have received a message from Shiny Metal API:</p>
 
     <hr/>
     
