--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -71,9 +71,7 @@
   <h3>Staff only</h3>
   <hr/>
     
-    <%= render partial: 'user_keys/show_partials/list_of_objects', locals: { object_name: "Column", object_symbol: :columns} %>
-    
-    <%= render partial: 'user_keys/show_partials/list_of_objects', locals: { object_name: "Filter", object_symbol: :filters} %>
+    <%= render partial: 'user_keys/show_partials/list_of_resources' %>
   
     <%= render partial: 'user_keys/show_partials/list_of_organizations' %>
     
