--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,5 @@
-<br /><br />
-<p> Under development. </p>
-<br /><br />
+<footer>
+  <br><br>
+  <p>&nbsp;Under development.</p>
+  <br><br>
+</footer>
