--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,41 +1,45 @@
-  <ul class="left"> 
-    <li class="divider"></li>
-    
+  <ul class="left">
+    <!-- <li class="divider"></li> -->
+
     <!-- Begin admin login check-->
-    <% if logged_in? and @current_user.role? :is_staff %>
-    <li><%= link_to "Users", users_path %></li>
-    
-    <li><%= link_to "User Keys", user_keys_path %>
-    
-    <li><%= link_to "Filters", filters_path %></li>
-  
-    <li class="has-form">
-      <div class="collapsed_row">
-        <%= form_tag users_path, method: 'get' do %>
-          <div class="search-param">
-            <%= text_field_tag :search, params[:search] %>
+    <% if logged_in? %>
+      <% if @current_user.role? :is_staff %>
+        <li><%= link_to "Users", users_path %></li>
+        <li><%= link_to "User Keys", user_keys_path %>
+        <li><%= link_to "Filters", filters_path %></li>
+
+        <li class="has-form" id="search-form">
+          <div class="collapsed_row">
+            <%= form_tag users_path, method: 'GET' do %>
+              <div class="search-label s4">
+                <%= submit_tag "Find User:", :name => nil, class: "search-button postfix" %>
+              </div>
+              <div class="search-param s8">
+                <%= text_field_tag :search, params[:search] %>
+              </div>
+            <% end %>
           </div>
-          <div class="search-label">
-            <%= submit_tag "Find User", :name => nil, class: "search-button info postfix" %>
-          </div>
-        <% end %>
-      </div>
-    </li>
-    <% end %>
-    <% if logged_in? %> <!--End admin login check, begin basic user login check-->
-      <li><%= link_to "Your Keys", own_user_keys_path %></li>
+        </li>
+      <% end %>
+
     <% end %>
   </ul>
 
 <ul class="right">
-  <% if logged_in? %>
-    <li><%= link_to "Welcome, #{current_user.andrew_id}", @current_user %></li>
-    
-    <li class="divider"></li>
-    
-    <li><%= link_to "Logout", logout_path %></li>
-  <% else %>
-    <li><%= link_to "Login", login_path %></li>
-  <% end %>
-  </li>
+  <!-- Right Nav Section -->
+  <ul class="right">
+    <% if logged_in? %>
+    <li class="has-dropdown">
+      <a href="#">Welcome, <%= @current_user.andrew_id %>!</a>
+      <ul class="dropdown">
+        <li><%= link_to "My Keys", own_user_keys_path %></li>
+        <li><%= link_to "Logout", logout_path %></li>
+      </ul>
+    </li>
+    <% else %>
+    <li>
+      <%= link_to "Login", login_path %>
+    </li>
+    <% end %>
+  </ul>
 </ul>
