--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -75,20 +75,25 @@
   
     <%= render partial: 'user_keys/show_partials/list_of_organizations' %>
     
-    <!-- Show the key's approvers if the key is at the approval stage or later. -->
-    <% if @user_key.at_stage? :awaiting_confirmation or @user_key.at_stage? :confirmed %>
-      <%= render partial: 'user_keys/show_partials/list_of_approvers' %> 
-    <% end %>
-    
   </div>
+  
+  
+  <% if @user_key.at_stage? :awaiting_confirmation %>
+  <div class="staff_only panel row">
+  <!-- Show the key's approvers if the key is at the approval stage. -->
+      <div class="column">
+        <%= render partial: 'user_keys/show_partials/list_of_approvers' %>
+      </div>
+      <div class="column">
+        <% if @current_user.role? :is_approver %>
+          <%= render partial: 'user_keys/show_partials/approval_checkbox' %>
+        <% end %>
+      </div>
+  </div>
+  <% end %>  
 <% end %>
-
 <!-- End of general staff-only information. -->
 
-<!-- Approvers submit their approval here -->
-<% if @user_key.at_stage? :awaiting_confirmation and @current_user.role? :is_approver %>
-  <%= render partial: 'user_keys/show_partials/approval_checkbox' %>
-<% end  %>
 
 <!-- Confirm, reset, delete, and apply filters here. -->
 <% if @current_user.role? :admin and !(@user_key.at_stage? :awaiting_submission) %>
