--- a/app/views/user_keys/show_partials/_list_of_resources.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_resources.html.erb
@@ -12,26 +12,25 @@
   
   <div class="row">
     <div class="column">
-    <h4>Whitelists</h4>
+    <h4>Rows</h4>
       
     <% if !whitelists.empty? %>
       <ul class="no_bullets">
+        <% first_word_and = "" %>
+        <% first_word_or = "" %>
         <% for whitelist in whitelists %>
-          <fieldset>
+            <em><%= first_word_or %></em>
             <ul>
-              <% for filter in whitelist.filters %>
-                <li><%= filter.name %></li>
+              <% for filter in whitelist.filters %>                
+                <li><%= first_word_and %><span class="success"><%= filter.name %></li></span>
+                 <% first_word_and = "and " %>
+                 <% first_word_or = "or " %>
               <% end %>
             </ul>
-          <li><%= link_to "Edit Whitelist", edit_user_key_whitelist_path(@user_key, whitelist), class: "small-button" %>
-          | <%= link_to "Delete Whitelist", user_key_whitelist_path(@user_key, whitelist), method: :delete,
-                data: {confirm: "Are you sure?"}, class: "small-button" %>
-          </li>
-          </fieldset>
         <% end %>
       </ul>
     <% else %>
-      <p>No whitelists for this resource</p>
+      <p>None</p>
     <% end %>
     </div>
     
@@ -42,11 +41,11 @@
       <% if !columns.empty? %>
         <ul>
           <% for col in columns %>
-            <li><%= col.name %></li>
+            <li><span class="success"><%= col.name %></span></li>
           <% end %>
         </ul>
       <% else %>
-      <p>No columns for this resource</p>
+      <p>None</p>
       <% end %>
     
       </div>
