--- a/app/views/home/_requester_dashboard.html.erb
+++ b/app/views/home/_requester_dashboard.html.erb
@@ -75,7 +75,7 @@
 <% @expired_keys.each do |key| %>
   <tr>
     <td><%= link_to key.display_name, user_key_path(key) %></td> 
-    <td><%= key.time_expired ? key.time_expired..to_formatted_s(:long_ordinal) : "N/A" %></td>
+    <td><%= key.time_expired ? key.time_expired.to_formatted_s(:long_ordinal) : "N/A" %></td>
   </tr>
 <% end %>
 </table>
