Reorganized whitelist details on user key show page

--- a/app/views/user_keys/form_partials/_resources_checkboxes.html.erb
+++ b/app/views/user_keys/form_partials/_resources_checkboxes.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <h2><%= resource.capitalize %></h2>
     
-    <div class="small-6 columns">
+    <div class="small-7 columns">
     <h4>Rows</h4>
     
       <% @user_key.whitelists.restrict_to(resource).to_a.each do |whitelist| %>
@@ -16,16 +16,16 @@
   
       <div id="<%= resource %>"> <!-- Nested form uses this #tag to add new nested form-->
         <br/>
-        <%= link_to_add_association 'Add clause', f, :whitelists,
+        <%= link_to_add_association "Add #{resource} clause", f, :whitelists,
                                    partial: 'user_keys/form_partials/whitelist_fields',
                                    html_options: { data: {'association-insertion-node': 'this' }},
                                    render_options: {:locals => {:resource => resource }}, class: "small-button" %>
-        <br/>
+        <br/><br/>
       </div>
     
     </div>
 
-    <div class="small-5 small-offset-1 columns">
+    <div class="small-4 small-offset-1 columns">
     <h4>Columns</h4>
       <% if Column.restrict_to(resource).empty? %>
       None exist in the system.
