--- a/app/views/user_keys/show_partials/_list_of_organizations.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_organizations.html.erb
@@ -1,8 +1,14 @@
+<hr/>
+
 <p>
-  <b><%= pluralize(@user_key.organizations.size, 'Organization') %></b><br />
-  <ul>
-    <% for org in @user_key.organizations %>
-      <li><%= org.name %></li>
-    <% end  %>
-  </ul>
+  <h3>Special Organization Access</h3>
+  <% if @user_key.organizations.empty? %>
+    None
+  <% else %>
+    <ul>
+      <% for org in @user_key.organizations %>
+        <li><span class="success"><%= org.name %></span></li>
+      <% end %>
+    </ul>
+  <% end %>
 </p>
