--- a/app/views/user_keys/show_partials/_approval_status.html.erb
+++ b/app/views/user_keys/show_partials/_approval_status.html.erb
@@ -1,20 +1,22 @@
-<div class="panel text-center">
-<p>
-  <strong>Approval Status:</strong>
-  <i class="fi-check success">
-    Begun by requester?
-  </i> &nbsp;
-  <i class="fi-arrow-right"></i> &nbsp;
-  <i class="<%= @user_key.at_stage?(:awaiting_filters, true) ? "fi-check success" : "fi-x alert" %>">
-    Submitted?
-  </i> &nbsp;
-  <i class="fi-arrow-right"></i> &nbsp;
-  <i class="<%= @user_key.at_stage?(:awaiting_confirmation, true) ? "fi-check success" : "fi-x alert" %>">
-    Assigned Filters?
-  </i> &nbsp;
-  <i class="fi-arrow-right"></i> &nbsp;
-  <i class="<%= @user_key.at_stage?(:confirmed) ? "fi-check success" : "fi-x alert" %>">
-    Confirmed?
-  </i>
-</p>
+<div class="panel text-center approval-process-container">
+  <!-- <p><strong>Approval Status:</strong></p> -->
+  <div id="approval-statuses" class="s12">
+
+    <div class="status s3 success">
+      <div class="text-center">Begun by requester</div>
+    </div>
+
+    <div class="status s3 <%= @user_key.at_stage?(:awaiting_filters, true) ? 'success' : 'info' %>">
+      <div class="text-center">Submitted</div>
+    </div>
+
+    <div class="status s3 <%= @user_key.at_stage?(:awaiting_confirmation, true) ? 'success' : 'info' %>">
+      <div class="text-center">Assigned Filters</div>
+    </div>
+
+    <div class="status s3 <%= @user_key.at_stage?(:confirmed) ? 'success' : 'info' %>">
+      <div class="text-center">Confirmed</div>
+    </div>
+
+  </ul>
 </div>
