--- a/app/assets/stylesheets/vars.scss
+++ b/app/assets/stylesheets/vars.scss
@@ -1,8 +1,9 @@
 $primary: #990000;
 $secondary: #D4D4D4;
 $disabled: #555;
-$alert: #fcf8e3;
-$alert-border: darken($alert, 1%);
+$success: darken(#dff0d8, 5%);
+$info: #fcf8e3;
+$alert: darken(#f2dede, 5%);
 
 $secondary-dark: #464646;
 $secondary-light: #F4F4F4;
@@ -14,3 +15,12 @@ $body: #686565;
 $body-dark: #222;
 $placeholder: rgba(0,0,0,0.4);
 $placeholder-blue: #D4DEE2;
+
+%center-text-XY {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translateY(-50%) translateX(-50%);
+  -ms-transform: translateY(-50%) translateX(-50%);
+  transform: translateY(-50%) translateX(-50%);
+}
