--- a/app/views/filters/show.html.erb
+++ b/app/views/filters/show.html.erb
@@ -1,3 +1,5 @@
+<h3>Filter Details</h3>
+
 <p>
   <strong>Resource:</strong>
   <%= @filter.resource %>
@@ -12,4 +14,5 @@
 
 <%= link_to 'Back to filters list', filters_path, class: "big-button secondary" %>
 <br/>
-<%= link_to 'Delete filter', @filter, method: :delete, data: { confirm: 'Are you sure that you want to delete this filter?' }, class: "small-button" %></td>
+<%= link_to 'Delete filter', @filter, method: :delete, data: { confirm: 'Are you sure that you want to delete this filter?' },
+            class: "small-button", disabled: !@filter.is_destroyable? %></td>
